Cleaned up layout issues
There are line-height issues with "tags" and font-size issues on home
page.

--- a/sass/course.scss
+++ b/sass/course.scss
@@ -402,6 +402,12 @@
 		}
 	}
 
+	@include breakpoint(mobile) {
+		#main-section {
+			top:8px;
+		}
+	}
+
 	@include breakpoint(mobilep) {
 		#query-summary-bar {
 			padding: 25px 25px 25px 5px;
