--- a/sass/search.scss
+++ b/sass/search.scss
@@ -563,8 +563,12 @@
 		.pricebox {
 			width: 60%
 		}
+		#main-section {
+			margin-left: 0;
+		}
 		#query-summary-bar {
-			margin: -20px;
+			margin: 0px;
+			padding-left: 5px;
 		}
 		#results-counter {
 			padding-left: 5px;
@@ -581,11 +585,13 @@
 	@include breakpoint(mobile) {
 		#main-section {
 			margin-left: 0px;
+			margin-top: 0px;
+			top: 214px;
 		}
 
 		#query-summary-bar {
 			height: 100px;
-			margin: -18px;
+			margin: 0px;
 			font-size: 0.8em;
 		}
 
@@ -615,6 +621,7 @@
 		}
 		#query-summary-bar {
 			font-size: 0.75em;
+			padding-top: 5px;
 		}
 		#results-list a {
 			font-size: 0.77em;
